--- a/css/popup.css
+++ b/css/popup.css
@@ -10,6 +10,17 @@
   border-radius: 0.8rem;
   outline: 0;
 }
+
+.modal-dialog-centered {
+  min-height: calc(100% - 3.5rem);
+}
+
+/* updated margin to bring modal dialog box to center  (~ Deenu) */
+.modal-dialog {
+  max-width: 500px;
+  margin: 6rem auto;
+}
+
 .modal-header {
   display: flex;
   align-items: flex-start;
@@ -19,11 +30,13 @@
   border-top-left-radius: calc(0.8rem - 1px);
   border-top-right-radius: calc(0.8rem - 1px);
 }
+
 .modal-header .close {
   opacity: 1;
   padding: 1rem 1rem;
   margin: -1rem -1rem -1rem auto;
 }
+
 button.close {
   padding: 0;
   background-color: transparent;
@@ -31,6 +44,7 @@ button.close {
   appearance: none;
   cursor: pointer;
 }
+
 .close {
   float: right;
   font-size: 1.5rem;
@@ -40,15 +54,18 @@ button.close {
   text-shadow: 0 1px 0 #fff;
   opacity: 0.5;
 }
+
 .modal-title {
   color: #001996;
   font-size: 1.03594rem;
   font-family: "Open Sans", sans-serif;
   margin: 0;
 }
+
 .modal-body {
   padding: 1rem;
 }
+
 .recommender-label {
   color: #565858;
   font-size: 0.79688rem;
@@ -56,6 +73,7 @@ button.close {
   font-family: "Open Sans", sans-serif;
   margin-top: 0.2rem;
 }
+
 .recommender-body {
   font-size: 0.95rem;
   font-weight: 200;
@@ -65,6 +83,7 @@ button.close {
   color: #565858;
   margin-bottom: 0.75rem;
 }
+
 a {
   color: #001996;
   font-size: 0.79688rem;
@@ -72,17 +91,20 @@ a {
   cursor: pointer;
   font-family: "Open Sans", sans-serif;
 }
+
 .terms-of-use-container {
   margin-top: 1rem;
   padding-top: 0.25rem;
   margin-bottom: -0.625rem;
 }
+
 .terms-of-use-container p {
   font-size: 0.75703rem;
   margin-bottom: 0.5rem;
   font-family: "Open Sans", sans-serif;
   color: #565858;
 }
+
 .modal-footer {
   display: -webkit-box;
   display: flex;
@@ -96,9 +118,11 @@ a {
   border-bottom-right-radius: calc(0.8rem - 1px);
   border-bottom-left-radius: calc(0.8rem - 1px);
 }
+
 button {
   margin-left: 0.5rem;
 }
+
 .btn-primary {
   font-family: "Open Sans", sans-serif;
   font-size: 0.79688rem;
@@ -109,13 +133,20 @@ button {
   color: #fff;
   width: 4.5rem;
 }
-.modal-dialog-centered {
-  min-height: calc(100% - 3.5rem);
-}
-.modal-dialog {
-  max-width: 500px;
-  margin: 1.75rem auto;
-}
+
 .border-top {
   border-top: 1px solid #d3d3d3 !important;
 }
+
+.element {
+  transition: opacity 0.3s, height 0.3s;
+  opacity: 1;
+  height: 100%;
+}
+
+.hide {
+  height: 0;
+  opacity: 0;
+}
+
+/* animating */
