--- a/client/css/popup.css
+++ b/client/css/popup.css
@@ -84,6 +84,16 @@ button.close {
   margin-bottom: 0.75rem;
 }
 
+.recommender-body-error {
+  font-size: 0.95rem;
+  font-weight: 200;
+  margin-bottom: 0;
+  margin-top: 0.5rem;
+  font-family: "Open Sans", sans-serif;
+  color: #ee0606;
+  margin-bottom: 0.75rem;
+}
+
 a {
   color: #001996;
   font-size: 0.79688rem;
